Fixed index page navbar z-index issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,14 +5,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&display=swap");
 
 body {
   margin-top: 20px;
 }
->>>>>>> 0a81522ffd946afa65d978eaed983547c87d4e61
-.line {
+>>>>>>>0a81522ffd946afa65d978eaed983547c87d4e61 .line {
   letter-spacing: 1px;
 }
 .nav {
